ingress-for-kind/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    # 如果您使用的是 NGINX Ingress Controller，可以加入這些註解
    spec.ingressClassName: "nginx"
    # 指定 Ingress Controller 執行在特定節點
    nginx.ingress.kubernetes.io/node-selector: "tier=worker1"
spec:
  rules:
  - host: "backend.127.0.0.1.sslip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-service
            port:
              number: 80
  - host: "frontend.127.0.0.1.sslip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 80
